--- a/assets/style.css
+++ b/assets/style.css
@@ -4,12 +4,16 @@ body {
     min-height: 100vh;
 }
 
-main {
+/* main {
     flex-grow: 1;
-}
+} */
 .main-body{
     min-width: 95vw;
 }
+.spell-list{
+    height: 87vh;
+}
+
 .table-bg{
     background-color: rgb(82, 57, 43);
 }
@@ -25,7 +29,7 @@ main {
     font-family: 'Nothing You Could Do', cursive;
 }
 
-.school-abjuration{
+.school-Abjuration{
     background-image: url(https://kwilkins.com/dnd/resources/abjuration.png);
     min-width: 90%;
     min-height: 35vh;
@@ -33,7 +37,7 @@ main {
  background-position: center;
 }
 
-.school-conjuration{
+.school-Conjuration{
     background-image: url(https://kwilkins.com/dnd/resources/conjuration.png);
     min-width: 90%;
     min-height: 30vh;
@@ -41,7 +45,7 @@ main {
  background-position: center;
 }
 
-.school-divination{
+.school-Divination{
     background-image: url(https://kwilkins.com/dnd/resources/divination.png);
     min-width: 90%;
     min-height: 30vh;
@@ -49,7 +53,7 @@ main {
  background-position: center;
 }
 
-.school-enchantment{
+.school-Enchantment{
     background-image: url(https://kwilkins.com/dnd/resources/enchantment.png);
     min-width: 90%;
     min-height: 30vh;
@@ -57,7 +61,7 @@ main {
  background-position: center;
 }
 
-.school-evocation{
+.school-Evocation{
     background-image: url(https://kwilkins.com/dnd/resources/evocation.png);
     min-width: 90%;
     min-height: 30vh;
@@ -65,7 +69,7 @@ main {
  background-position: center;
 }
 
-.school-illusion{
+.school-Illusion{
     background-image: url(https://kwilkins.com/dnd/resources/illusion.png);
     min-width: 90%;
     min-height: 30vh;
@@ -73,7 +77,7 @@ main {
  background-position: center;
 }
 
-.school-necromancy{
+.school-Necromancy{
     background-image: url(https://kwilkins.com/dnd/resources/necromancy.png);
     min-width: 90%;
     min-height: 30vh;
@@ -81,7 +85,7 @@ main {
  background-position: center;
 }
 
-.school-transmutation{
+.school-Transmutation{
     background-image: url(https://kwilkins.com/dnd/resources/transmutation.png);
     min-width: 90%;
     min-height: 30vh;
